Refactoring. Also added some tests and swag docs. Fixed some issues with wrong responces
