# controllers/guest.go
@@ -10,14 +10,29 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// Structure describing the json fields that should be in the guest access request
 type GuestInput struct {
-	FullName string `json:"full_name"`
+	FullName string `json:"full_name" binding:"required"`
 	DeviceId uint   `json:"device_id" binding:"required"`
+}
+
+type GuestOutput struct {
+	AccessToken  string `json:"access_token" example:"token"`
+	RefreshToken string `json:"refresh_token" example:"token"`
+	ExpiresAt    int64  `json:"expires_at" example:"244534234"`
+	Role         string `json:"role" example:"root"`
 }
 
 const ROLE = "guest"
 
+// Guest authorizes user as guest
+//
+//	@Summary		guest authorization
+//	@Description	authorizes user as guest
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	GuestOutput
+//	@Schemes
+//	@Router	/guest [get]
 func (p *PublicController) Guest(c *gin.Context) {
 
 	var input GuestInput
@@ -41,13 +56,13 @@ func (p *PublicController) Guest(c *gin.Context) {
 	expiresAt := time.Now().Add(time.Hour * time.Duration(p.RefreshTokenCfg.LifespanHour))
 	refreshClaims := token.NewRefresh(-1, input.DeviceId, guest.Id, ROLE, expiresAt)
 
-    refreshId, err := refreshClaims.InsertOrUpdate(p.DB)
-    if err != nil {
+	refreshId, err := refreshClaims.InsertOrUpdate(p.DB)
+	if err != nil {
 		log.Println("Error inserting or updating on duplicate key refresh token in the db: ", err)
 		c.Status(http.StatusInternalServerError)
 		return
-    }
-    refreshClaims.TokenID = refreshId
+	}
+	refreshClaims.TokenID = refreshId
 
 	refreshToken, err := refreshClaims.TokenString(p.RefreshTokenCfg.Secret)
 
@@ -67,11 +82,11 @@ func (p *PublicController) Guest(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, gin.H{
-		"accessToken":  accessToken,
-		"refreshToken": refreshToken,
-		"expires_at":   expiresAt.Unix(),
-		"role":         ROLE,
+	c.JSON(http.StatusOK, GuestOutput{
+		AccessToken:  accessToken,
+		RefreshToken: refreshToken,
+		ExpiresAt:    expiresAt.Unix(),
+		Role:         ROLE,
 	})
 
 }
